# TALGS

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  app.sqlite3  auth.sqlite3  db.sqlite3  diesel.toml  key.sqlite3  manage.py  test.toml  test.txt
TALGS/: asgi.py  settings.py  urls.py  wsgi.py
TALGS/templates/: head-meta.html  link.html  master.html  navbar-burger.html
color/: Cargo.toml
color/src/: main.rs
database/: .env  Cargo.toml  db.sqlite3  remote.sqlite3
database/src/: lib.rs  models.rs  product.rs  schema.rs  section.rs
docs/: tarefa_pi.md
docs/raw/: DER.brM3  Diagrama_Caso_De_Uso.vsdx  Diagrama_de_Classe.dia  Lógico_1.brM3  Modelo_relacional_diagramado.dia
key/: apps.py  forms.py  group.py  urls.py  views.py
models/: admin.py  apps.py  behaviour.py  forms.py  handler.py  models.py  queryset.py  urls.py  views.py
pages/: apps.py  forms.py  formsets.py  group.py  urls.py  views.py
scripts/: avenv  avenv.bat  change  change.bat  create_admin  dvenv  dvenv.bat  run  run.bat  test  test.bat  venv  venv.bat
src/: auth.rs  colors.rs  database.rs  encryption.rs  files.rs  forms.rs  hasher.rs  lib.rs  parser.rs  schema.rs  session.rs  str.rs  views.rs
templates/: admin_panel.html  client_panel.html  create_account.html  files.html  form.html  head-meta.html  home.html  login.html  main.html  master.html  navbar-burger.html  new_product.html  password_change_done.html  password_change_form.html  redirect.html  register.html  tarefa.html  test.html
windows/: activate.bat  deactivate.bat  pyvenv.cfg  run.bat  venv.bat
(+159 files in other folders)
