[package]
name = "talgs"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
diesel = { version = "2.2.1", features = ["sqlite", "chrono", "r2d2"] }
ntex = {version = "2.0.1", features = ["async-std"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
jsonwebtoken = "9.2.0"
chrono = "0.4.38"
ntex-session = "2.0.0"
rsa = "0.9.6"
rand = "0.8.5"
r2d2 = "0.8.10"
ntex-files = "2.0.0"
colored = "2.1.0"
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
futures = "0.3.30"
regex = "1.11.0"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev]
lto=false
codegen-units = 2
